<resources>
    <string name="app_name">In App Updates</string>
    <string name="action_more">More</string>

    <string name="main_background">Background</string>
    <string name="main_version_number">Version number</string>
    <string name="employee_picture">Employee picture</string>
    <string name="employee_name">Employee name</string>

    <string name="flexible_update_item">Update App</string>
    <string name="update_needed">Update needed</string>
    <string name="about_app">About Us</string>

    <string name="downloading_text">Downloading Update...</string>
    <string name="downloaded_text">Update Downloaded</string>
    <string name="download_failed_text">Download failed.</string>
    <string name="download_canceled_text">Download canceled.</string>
    <string name="flexible_update_downloaded">Flexible Update Downloaded!</string>
    <string name="success_text">Success!</string>

    <string name="lorum_ipsem_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

</resources>
