<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:backgroundTint="#ffffff">

    <LinearLayout
        android:id="@+id/updateContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/updateView"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/update_needed"
                android:textSize="20sp"
                android:textColor="@android:color/black"/>

            <Button
                android:id="@+id/updateButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/flexible_update_item" />

    </LinearLayout>

    <TextView
        android:id="@+id/aboutUsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_app"
        android:textSize="30sp"
        android:textColor="@android:color/black"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/updateContainer"/>

    <TextView
        android:id="@+id/placeholderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lorum_ipsem_text"
        android:textColor="@android:color/black"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aboutUsText" />

</android.support.constraint.ConstraintLayout>